--- a/project.html
+++ b/project.html
@@ -285,7 +285,7 @@
                                     <text x="50%" y="75%" font-family="Arial" font-size="20" text-anchor="middle" fill="#673ab7" font-weight="bold">Rental Portal</text>
                                     <text x="50%" y="82%" font-family="Arial" font-size="14" text-anchor="middle" fill="#666">Property Management System</text>
                                 </svg>
-                                <a class="cs-btn" href="#"><i class="fa-light fa-arrow-right-long"></i></a>
+                                <a class="cs-btn" href="https://rentalportal01.netlify.app/"><i class="fa-light fa-arrow-right-long"></i></a>
                             </div>
                             <div class="cs-content">
                                 <span class="number">03</span>
