--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="mobile-side-menu">
             <div class="side-menu-content">
                 <div class="side-menu-head">
-                    <a href="index.html"><img src="assets/img/logo/logo-2.png" alt="Aptecode Logo"></a>
+                    <a href="index.html"><img src="assets/img/logo/aptecode.png" alt="Aptecode Logo"></a>
                     <button class="mobile-side-menu-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="side-menu-wrap"></div>
